Support filtering mechanism for file part of backup

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 vaultwarden_data = "/data/vw-data/"
 backup_location = "/data/vw-backup/"
+exclude_files = "vaultwarden"
 
 [db]
 db_type = "postgresql"
