--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vaultwarden-backup"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Sergey Malinkin <malinkinsa@gmail.com>"]
 edition = "2021"
 
@@ -11,3 +11,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 tar = "0.4.38"
 toml = "0.7.3"
+walkdir = "2.3.3"
+zip = "0.6.6"
